# tmux-browse-federation

./: CHANGELOG.md  README.md  manifest.json  pyproject.toml  startup.py  ui_blocks.html
federation/: __init__.py  routes.py  session_merge.py  store.py
server/: routes.py
static/: federation.js
tests/: test_federation.py
