[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "tmux-browse-federation"
version = "0.7.6"
description = "Optional LAN federation for tmux-browse — auto-discover and aggregate sessions across peer hosts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "itsmygithubacct" }]
keywords = ["tmux", "lan", "federation", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Shells",
]

# This package ships no runtime deps of its own — the dashboard it
# loads into (tmux-browse >= 0.7.6) is stdlib-only by design, and
# so are we. The version compatibility window lives in
# ``manifest.json`` as ``min_tmux_browse``.

[project.urls]
Homepage = "https://github.com/itsmygithubacct/tmux-browse-federation"
Core = "https://github.com/itsmygithubacct/tmux-browse"

[tool.setuptools.packages.find]
include = ["federation*"]
exclude = ["tests*"]
